# RayTracingDenoiser

./: .gitignore  .gitmodules  1-Deploy.bat  1-Deploy.sh  2-Build.bat  2-Build.sh  3-Prepare NRD SDK.bat  3-Prepare NRD SDK.sh  3a-Test samples.bat  3a-TestSamples.bat  3b-Run NRD sample.bat  3b-RunNRDSample.bat  4-Clean.bat  4-Clean.sh  4-PackNRD.bat  4a-Prepare NRI SDK.bat  4b-Prepare NRD SDK.bat  4c-Prepare NRD SDK with shaders.bat  5-Clean.bat  CMakeLists.txt  Deploy.bat  LICENSE.md  NRD.sln  README.md  ShaderCompilation.cmake  Shaders.cfg  TestSamples.bat  UPDATE.md
.github/workflows/: build.yml
CompileShaders/: BindingBridge.hlsl  CompileShader.bat  CompileShaders.cpp  STL.hlsl
Include/: NRD.h  NRD.hlsl  NRD.hlsli  NRDDescs.h  NRDSettings.h
Integration/: NRDIntegration.h  NRDIntegration.hpp
NRD/: CMakeLists.txt
NRD/Include/: NRD.h  NRDDescs.h  NRDSettings.h
NRD/Integration/: NRDIntegration.h  NRDIntegration.hpp
NRD/Shaders/: NRD.hlsl  NRD_Common.hlsl  NRD_DiffuseSpecular_Blur.cs.hlsl  NRD_DiffuseSpecular_HistoryFix.cs.hlsl  NRD_DiffuseSpecular_PostBlur.cs.hlsl  NRD_DiffuseSpecular_PreBlur.cs.hlsl  NRD_DiffuseSpecular_TemporalAccumulation.cs.hlsl  NRD_DiffuseSpecular_TemporalStabilization.cs.hlsl  NRD_Diffuse_Blur.cs.hlsl  NRD_Diffuse_HistoryFix.cs.hlsl  NRD_Diffuse_Mips.cs.hlsl  NRD_Diffuse_PostBlur.cs.hlsl  NRD_Diffuse_PreBlur.cs.hlsl  NRD_Diffuse_TemporalAccumulation.cs.hlsl  NRD_Diffuse_TemporalStabilization.cs.hlsl  NRD_MipGeneration_Float4.cs.hlsl  NRD_MipGeneration_Float4_Float.cs.hlsl  NRD_MipGeneration_Float4_Float4_Float.cs.hlsl  NRD_Shadow_Blur.cs.hlsl  NRD_Shadow_PreBlur.cs.hlsl  NRD_Shadow_TemporalStabilization.cs.hlsl  NRD_Specular_Blur.cs.hlsl  NRD_Specular_HistoryFix.cs.hlsl  NRD_Specular_Mips.cs.hlsl  NRD_Specular_PostBlur.cs.hlsl  NRD_Specular_PreBlur.cs.hlsl  NRD_Specular_TemporalAccumulation.cs.hlsl  NRD_Specular_TemporalStabilization.cs.hlsl  NRD_TranslucentShadow_Blur.cs.hlsl  NRD_TranslucentShadow_PreBlur.cs.hlsl  NRD_TranslucentShadow_TemporalStabilization.cs.hlsl  Poisson.hlsl  REBLUR_Common.hlsl  REBLUR_Common_DiffuseSpatialFilter.hlsl  REBLUR_Common_SpecularSpatialFilter.hlsl  REBLUR_Config.hlsl  REBLUR_CopyViewZ.cs.hlsl  REBLUR_DiffuseSpecular_Blur.cs.hlsl  REBLUR_DiffuseSpecular_HistoryFix.cs.hlsl  REBLUR_DiffuseSpecular_PostBlur.cs.hlsl  (+44 more)
NRD/Source/: DenoiserImpl.cpp  DenoiserImpl.h  NRD.rc  Version.h  Wrapper.cpp
NRD/Source/Methods/: Diffuse.hpp  NrdDiffuse.hpp  NrdDiffuseSpecular.hpp  NrdShadow.hpp  NrdSpecular.hpp  NrdTranslucentShadow.hpp  Reblur_Diffuse.hpp  Reblur_DiffuseSpecular.hpp  Reblur_Specular.hpp  Relax.hpp  Relax_DiffuseSpecular.hpp  Shadow.hpp  Sigma_Shadow.hpp  Sigma_ShadowTranslucency.hpp  Sigma_TranslucentShadow.hpp  Specular.hpp  Svgf.hpp
NRI/Include/: NRI.h  NRIDescs.h  NRIDescs.hpp
ProjectBase/: .args  .editorconfig  Dependencies.xml  Premake.lua
ProjectBase/Packman/: config.packman.xml  packman  python.bat  python.sh
Projects/NRD/: NRD.vcxproj  NRD.vcxproj.filters
Projects/NRD_Shaders/: NRD_Shaders.vcxproj  NRD_Shaders.vcxproj.filters
Resources/: NRD.rc  Version.h
Samples/: 00_Clear.cpp  01_Triangle.cpp  02_SceneViewer.cpp  03_Readback.cpp  04_AsyncCompute.cpp  05_Multithreading.cpp  06_MultiGPU.cpp  07_RayTracing_Triangle.cpp  08_RayTracing_Boxes.cpp  09_RayTracing_NRD.cpp
Samples/SampleBase/: Camera.cpp  Camera.h  Helper.cpp  Helper.h  Input.cpp  Input.h  SampleBase.cpp  SampleBase.h  Utils.cpp  Utils.h
Samples/Shaders/: 01_Triangle.fs.hlsl  01_Triangle.vs.hlsl  02_Forward.fs.hlsl  02_Forward.vs.hlsl  02_ForwardDiscard.fs.hlsl  02_ForwardTransparent.fs.hlsl  02_Resources.hlsl  04_Surface.cs.hlsl  04_Triangles.fs.hlsl  04_Triangles.vs.hlsl  05_Box.vs.hlsl  05_Box0.fs.hlsl  05_Box1.fs.hlsl  05_Box2.fs.hlsl  05_Box3.fs.hlsl  05_Box4.fs.hlsl  05_Box5.fs.hlsl  05_Box6.fs.hlsl  05_Box7.fs.hlsl  06_Simple.fs.hlsl  06_Simple.vs.hlsl  07_RayTracing_Triangle.rchit.hlsl  07_RayTracing_Triangle.rgen.hlsl  07_RayTracing_Triangle.rmiss.hlsl  08_RayTracing_Box.rchit.hlsl  08_RayTracing_Box.rgen.hlsl  08_RayTracing_Box.rmiss.hlsl  09_Composition.cs.hlsl  09_IntegrateBRDF.cs.hlsl  09_Main.rahit.hlsl  09_Main.rchit.hlsl  09_Main.rmiss.hlsl  09_PreDlss.cs.hlsl  09_Raytracing.hlsl  09_Raytracing00.rgen.hlsl  09_Raytracing01.rgen.hlsl  09_Raytracing10.rgen.hlsl  09_Raytracing11.rgen.hlsl  09_RaytracingShared.hlsl  09_Resources.hlsl  (+5 more)
Shaders/: Shaders.cfg
Shaders/Include/: Common.hlsli  NRD.hlsli  REBLUR_Blur.hlsli  REBLUR_Common.hlsli  REBLUR_Common_DiffuseSpatialFilter.hlsli  REBLUR_Common_SpecularSpatialFilter.hlsli  REBLUR_Config.hlsli  REBLUR_Copy.hlsli  REBLUR_HistoryFix.hlsli  REBLUR_HitDistReconstruction.hlsli  REBLUR_PostBlur.hlsli  REBLUR_PrePass.hlsli  REBLUR_SplitScreen.hlsli  REBLUR_TemporalAccumulation.hlsli  REBLUR_TemporalStabilization.hlsli  RELAX_AntiFirefly.hlsli  RELAX_Atrous.hlsli  RELAX_AtrousSmem.hlsli  RELAX_Common.hlsli  RELAX_Config.hlsli  RELAX_HistoryClamping.hlsli  RELAX_HistoryFix.hlsli  RELAX_HitDistReconstruction.hlsli  RELAX_PrePass.hlsli  RELAX_SplitScreen.hlsli  RELAX_TemporalAccumulation.hlsli  SIGMA_Blur.hlsli  SIGMA_ClassifyTiles.hlsli  SIGMA_Common.hlsli  SIGMA_Config.hlsli  SIGMA_Copy.hlsli  SIGMA_SmoothTiles.hlsli  SIGMA_SplitScreen.hlsli  SIGMA_TemporalStabilization.hlsli
Shaders/Resources/: Clear_f.resources.hlsli  Clear_ui.resources.hlsli  REBLUR_Blur.resources.hlsli  REBLUR_DiffuseSpecularOcclusion_Blur.resources.hlsli  REBLUR_DiffuseSpecularOcclusion_HistoryFix.resources.hlsli  REBLUR_DiffuseSpecularOcclusion_MipGen.resources.hlsli  REBLUR_DiffuseSpecularOcclusion_PostBlur.resources.hlsli  REBLUR_DiffuseSpecularOcclusion_SplitScreen.resources.hlsli  REBLUR_DiffuseSpecularOcclusion_TemporalAccumulation.resources.hlsli  REBLUR_DiffuseSpecular_Blur.resources.hlsli  REBLUR_DiffuseSpecular_CopyStabilizedHistory.resources.hlsli  REBLUR_HistoryFix.resources.hlsli  (+38 more)
Source/: DenoiserImpl.cpp  DenoiserImpl.h  InstanceImpl.cpp  InstanceImpl.h  NRD.rc  Other.cpp  Reblur.cpp  Reference.cpp  Relax.cpp  Sigma.cpp  StdAllocator.h  Timer.cpp  Timer.h  Version.h  Wrapper.cpp
(+1694 files in other folders)
